0.0.2 (preview 2, 1.12.2)
Added: Missing blueprint recipes for daggers and sickles
Added: Block placing with tools handler. Entirely configurable, you can set literally any item to work with this now. Defaults to Silent Gear pickaxes, shovels, and axes.
Fixed: Example swords having wood guards

0.0.1 (preview 1, 1.12.2)
Initial preview build